--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "AssistScript is a custom command language",
 	"main": "build/index.js",
 	"scripts": {
+		"dev:repl": "ts-node ./src/repl.ts",
 		"dev:listen": "npx nodemon",
 		"dev:main": "npx ts-node ./src/index.ts",
 		"dev:debug": "node --inspect --require ts-node/register ./src/index.ts",
