--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
 	"description": "AssistScript is a custom command language",
 	"main": "build/index.js",
 	"scripts": {
-		"dev:repl": "ts-node ./src/repl.ts",
-		"dev:listen": "npx nodemon",
-		"dev:main": "npx ts-node ./src/index.ts",
-		"dev:debug": "node --inspect --require ts-node/register ./src/index.ts",
+		"dev:repl:ts-node": "ts-node ./src/repl.ts",
+		"dev:repl:bun": "bun ./src/repl.ts",
+		"dev:ts-node": "npx ts-node ./src/index.ts",
+		"dev:bun": "bun ./src/index.ts",
+
 		"build": "rimraf ./build && tsc",
 		"start": "npm run build && node build/index.js",
 		"test": "jest"
