--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "assistscript",
 	"version": "1.6.0",
 	"description": "AssistScript is a custom command language",
-	"main": "build/index.js",
+	"main": "src/index.ts",
 	"scripts": {
 		"dev:repl:ts-node": "ts-node ./src/repl.ts",
 		"dev:repl:bun": "bun ./src/repl.ts",
