--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
 	"name": "assistscript",
 	"version": "0.6.0",
 	"description": "AssistScript is a custom command language",
-	"main": "src/index.ts",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"scripts": {
-		"dev:repl:ts-node": "ts-node ./src/repl.ts",
-		"dev:repl:bun": "bun ./src/repl.ts",
-		"dev:ts-node": "npx ts-node ./src/index.ts",
-		"dev:bun": "bun ./src/index.ts",
-		"build": "rimraf ./build && tsc",
+		"dev:repl:ts-node": "ts-node cli/repl.ts",
+		"dev:repl:bun": "bun cli/repl.ts",
+		"dev:ts-node": "npx ts-node cli/index.ts",
+		"dev:bun": "bun cli/index.ts",
 		"start": "npm run build && node build/index.js",
-		"test": "jest"
+		"test": "jest",
+		"build": "tsup"
 	},
 	"keywords": [
 		"language",
@@ -19,7 +24,7 @@
 		"interpreter"
 	],
 	"author": "fbn776",
-	"license": "ISC",
+	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.12",
 		"@types/node": "^20.10.6",
@@ -27,6 +32,7 @@
 		"rimraf": "^5.0.5",
 		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
+		"tsup": "^8.0.2",
 		"typescript": "^5.3.3"
 	}
 }
