--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
 		"dist"
 	],
 	"scripts": {
-		"dev:repl:ts-node": "ts-node cli/repl.ts",
-		"dev:repl:bun": "bun cli/repl.ts",
-		"dev:ts-node": "npx ts-node cli/index.ts",
-		"dev:bun": "bun cli/index.ts",
+		"dev:repl:ts-node": "ts-node testing/repl.ts",
+		"dev:repl:bun": "bun testing/repl.ts",
+		"dev:ts-node": "npx ts-node testing/index.ts",
+		"dev:bun": "bun testing/index.ts",
 		"start": "npm run build && node build/index.js",
 		"test": "jest",
 		"build": "tsup"
