fix: added `docs` to be included

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"files": [
-		"dist"
+		"dist",
+		"docs"
 	],
 	"bin": {
 		"aslangc": "./dist/cli.js"
