--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"docs"
 	],
 	"bin": {
-		"aslangc": "./dist/cli.js"
+		"aslangc": "dist/cli.js"
 	},
 	"scripts": {
 		"dev:repl:ts-node": "ts-node sandbox/repl.ts",
@@ -20,7 +20,8 @@
 		"test": "jest",
 		"build": "tsup",
 		"start": "npm run build && node build/index.js",
-		"gen-docs": "bun dev-tools/docs-gen/index.ts"
+		"gen-docs": "bun dev-tools/docs-gen/index.ts",
+		"publish": "npm run build ; npm publish"
 	},
 	"keywords": [
 		"language",
@@ -30,7 +31,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/fbn776/AssistScript.git"
+		"url": "git+https://github.com/fbn776/AssistScript.git"
 	},
 	"author": "fbn776",
 	"url": "https://febinnelson.me",
