--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,6 @@ out
 
 # vuepress v2.x temp and cache directory
 .temp
-.cache
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -130,3 +129,4 @@ out
 
 .idea/
 build/
+dist/
